@@ -2,6 +2,10 @@ main-menu (0.047) UNRELEASED; urgency=low
 
   * Kęstutis Biliūnas
     - Update Lithuanian translation (lt.po).
+  * Matt Kraai
+    - Do not default to a package that provides a virtual package that is
+      also provided by a package that is already installed (closes:
+      #216787).
 
  -- Denis Barbier <barbier@debian.org>  Thu, 23 Oct 2003 22:43:05 +0200
 
